--- a/_posts/2019-07-07-the-us-narrative-today.html
+++ b/_posts/2019-07-07-the-us-narrative-today.html
@@ -2522,107 +2522,107 @@ stories:
   domain: http://www.aspendailynews.com/
   link: https://www.aspendailynews.com/associated_press/iran-steps-further-from-nuke-deal-adding-pressure-on-europe/article_34d1596f-36a7-5089-8e53-9b07a9754dcd.html
 images:
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-dry-skin.jpg
-- name: mediterranean-mediterranean-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-kand-two.jpg
-- name: old-granary-field-oldhouse-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-umberto-bocc.jpg
-- name: oldtrain-oldtrain-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-hot-spicy.jpg
-- name: scream-IMG_7788.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_7788.jpg
-- name: razorcliff-razorcliff-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-creativity.jpg
-- name: aws-s3-stories-green-gears-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-green-gears-matrix.jpg
-- name: gears-4882162452-fa3126b38d-b-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-sunday.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-china-prop.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-china-prop.jpg
-- name: razorwire-DSC-0080-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-colored-circuits.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-nazi-poster.jpg
-- name: carry-load-carryload-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-dark-soul.jpg
-- name: paris-paris-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-dark-rain.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-light-dali.jpg
-- name: school-clouds-church-clouds-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-sand-paper.jpg
-- name: window-window-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-dark-dali.jpg
-- name: capital-battle-capitolbattle-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-blue-circuit.jpg
-- name: oldsmallboat-oldsmallboat-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-green-zuma.jpg
-- name: rain-princess-IMG_8302.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_8302.jpg
-- name: castle-wall-DSC-0067-dali-two.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-dali-two.JPG
-- name: oldcabin-store-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-nazi-poster.jpg
-- name: aws-s3-stories-new-machine-road-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-machine-road-atari-missle.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-mucha-mult.jpg
-- name: berlinwall2-berlinwall-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-sunday.jpg
-- name: old-school-house-old-schoolhouse-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-blue-circuit.jpg
-- name: aws-s3-stories-cityscape-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-cityscape-dali-three.jpg
-- name: catacombs-catacombs-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-emily-carr.jpg
-- name: server-cloud-server-racks-door-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-ww2-dresden.jpg
-- name: white-house-lawn-white-house-lawn-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-nazi-poster.jpg
-- name: fence-mexico-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-yellow-collage.jpg
-- name: old-school-house-old-schoolhouse-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-attack-planes.jpg
-- name: locked-up-steam-lock-up-steam-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-dali-two.jpg
-- name: adam-smith-adam-smith-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-dali-two.jpg
-- name: store-on-corner-oldcabin-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-colorful-blocks.jpg
-- name: wave-DSC_0004.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wave-DSC_0004.jpg
-- name: mosaic-face-mosaic-face-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-purple-pond.jpg
-- name: old-granary-field-oldhouse-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-blue-brush.jpg
-- name: old-house-oldhouse-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-gred-mash.jpg
-- name: server-cloud-server-racks-door-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-purple-pond.jpg
-- name: legal-statue-legalstatue-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-dali-two.jpg
-- name: christianity-christianity-under-construction-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-really-hot.jpg
-- name: two-sattelite-dishes-uncle-sam.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/two-sattelite-dishes-uncle-sam.jpg
-- name: mistywoods-babyfoot-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-gred-mash.jpg
-- name: ellis-island-ellis-island-room-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-bright-sand.jpg
-- name: old-school-house-old-schoolhouse-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-dark-rain.jpg
-- name: razorcliff-razorcliff-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-blue-circuit.jpg
-- name: old-door-lock-old-door-lock-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-plentiful.jpg
-- name: white-house-whitehouse-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-crunch-paper.jpg
-- name: old-door-lock-old-door-lock-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-blue-brush.jpg
-- name: containership-containership-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-spagetti-accident.jpg
-- name: old-door-lock-old-door-lock-2-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-copper-circuit.jpg
+- name: nyc-flag-nycflag-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-ww2-color.jpg
+- name: stories-servers-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-servers-blue-circuit.jpg
+- name: curtain-curtain-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-gan-vogh.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley.png
+- name: server-cloud-server-racks-door-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-colorful-dream.jpg
+- name: windowmountain-window-mountain-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-alien-goggles.jpg
+- name: mediterranean-mediterranean-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-nazi-poster.jpg
+- name: gears-4882162452-fa3126b38d-b-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-dali-two.jpg
+- name: server-cloud1-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud1-blue-circuit-5.jpg
+- name: castle-wall-DSC-0067-blue-granite.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-blue-granite.JPG
+- name: downtown-fredericksburg-downtown-fredericksburg-dry-skin.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-dry-skin.JPG
+- name: school-clouds-church-clouds-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-wols.jpg
+- name: old-gas-pumps-oldgaspumps-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-gan-vogh.jpg
+- name: rockingchair-rockingchair-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-pablo-blue.jpg
+- name: old-granary-field-oldhouse-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-neo-instinct.jpg
+- name: aws-s3-stories-new-digital-bits-capital-dc-flag-side-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-digital-bits-capital-dc-flag-side-view.jpg
+- name: oldsmallboat-oldsmallboat-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-cinnamon-rolls.jpg
+- name: crow_nazi_poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_nazi_poster.jpg
+- name: catacombs-catacombs-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-constitution.jpg
+- name: scream-IMG_8331.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_8331.jpg
+- name: mosaic-face-mosaic-face-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-satan-red.jpg
+- name: carry-load-carryload-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-blue-electricity.jpg
+- name: aws-s3-stories-vancouver-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-vancouver-diego-rivera1.jpg
+- name: bluelake-colorful-blocks-file-00-00-38-67.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-colorful-blocks-file-00-00-38-67.jpg
+- name: statue-of-liberty-front-view-statueofliberty-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-dry-skin.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-dali-two.jpg
+- name: oldbarn-oldbarn-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-pablo-blue.jpg
+- name: dragon-desert-desert-dragon-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-diego-rivera1.jpg
+- name: death-valley-death-valley-national-park-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-plentiful.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-copper-circuit-2.jpg
+- name: aws-s3-square-45-78-800-500-0-max-0-1--5-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-45-78-800-500-0-max-0-1--5-square.jpg
+- name: old-house-oldhouse-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-dry-skin.jpg
+- name: berlinwall2-berlinwall-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-kand-two.jpg
+- name: paris-paris-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-satan-red.jpg
+- name: white-house-whitehouse-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-clean-view.jpg
+- name: old-gas-pumps-oldgaspumps-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-rainbow-festival.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-matrix.jpg
+- name: blossombar-oily-mcoilface-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-oily-mcoilface-file-00-00-00-00.jpg
+- name: cargo-ship-cargo-ship-on-sea-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-attack-planes.jpg
+- name: berlinwall2-berlinwall-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-monet-one.jpg
+- name: meadowbutterfly-meadow-butterfly-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-pablo-blue.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-neo-instinct.jpg
+- name: docks-docks-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-alberto-giacometti.jpg
+- name: ellis-island-ellisisland-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-satan-red.jpg
+- name: oldhotel-oldhotel-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-smoking-cigarette.jpg
+- name: oldbarn-oldbarn-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-plentiful.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-crabapple.jpg
+- name: bluelake-neo-instinct-file-00-00-38-67.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-neo-instinct-file-00-00-38-67.jpg
+- name: nyc-flag-nycflag-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-dark-rain.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-blue-circuit-3.jpg
+- name: oldbarn-oldbarn-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-crunch-paper.jpg
 ---
 Central Catholic High School Holds Annual Basketball Camp.&nbsp;Dont Rebuke Those In Need.&nbsp;Five Terrifying Miami Neighbor Feuds.&nbsp;Oakland's Bold Investment To Address Displacement.&nbsp;Council Race Switcheroo; Tax Rate Questioned.&nbsp;Red Sox Tigers Baseball.&nbsp;Union Tennis Earns First State Championship.&nbsp;Grand Marshal Jimmy Alloy.&nbsp;
